--- a/service.html
+++ b/service.html
@@ -25,11 +25,6 @@
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
     <script>
         function gtag_report_conversion(url) {
-            console.log(`
-            GTAG: {
-                url: ${url}
-            }`);
-            return;
             var callback = function () {
                 if (typeof (url) != 'undefined') {
                     window.location = url;
@@ -109,7 +104,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-secondary me-2"></small>
-                    <a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a>
+                    <a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary"
+                        href="tel:+965 9777 3983">+965 9777 3983</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Whatsapp account" class="btn btn-sm-square bg-white text-primary me-1"
@@ -136,7 +132,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </div>
                 <div class="">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small><a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a></small>
+                    <small><a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary"
+                            href="tel:+965 9777 3983">+965 9777 3983</a></small>
                 </div>
             </div>
             <!-- toggler and quote -->
@@ -446,7 +443,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kuwait</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a onclick="gtag_report_conversion('tel:+965 9777 3983')" href="tel:+965 9777 3983">+965 9777 3983</a>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a
+                            onclick="gtag_report_conversion('tel:+965 9777 3983')" href="tel:+965 9777 3983">+965 9777
+                            3983</a>
                     </p>
                     <a href="mailto:support@altawasolclean.com" class="text-white mb-2"><i
                             class="fa fa-envelope me-3"></i>support@altawasolclean.com</a>
