upd meta keywords and description

--- a/gallery.html
+++ b/gallery.html
@@ -42,10 +42,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <meta charset="utf-8">
     <title>Al-Tawasol Co. - Kuwait's best cleaning solutions </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
+    <meta
+        content="تنظيف السجاد في مدينة, الكويت خدمة , التنظيف في الكويت Cleaning service in kuwait, Cleaning, تنظيف السجاد , Carpet Cleaning, تنظيف الأريكة , Sofa Cleaning, تنظيف المنزل , Home Cleaning, تنظيف المكاتب , Office Cleaning, Kuwait, تنظيف تواصل , Tawasol, شركة تنظيف , أفضل خدمة تنظيف , خدمة التنظيف بالقرب مني"
         name="keywords">
     <meta
-        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27 years of experience. We have an expert team of more than 35 cleaners. We provide the best cleaning service in kuwait. Our services include: Home cleaning, Office cleaning, Carpet cleaning, Sofa cleaning, Floor cleaning and polishing, Sanitization and more. شركة التواصل هي شركة تنظيف منازل ومكاتب احترافية في الكويت، بخبرة 27 عامًا. لدينا فريق يضم أكثر من 35 عامل نظافة. نقدم أفضل خدمات التنظيف في الكويت. تشمل خدماتنا تنظيف المنازل، وتنظيف المكاتب، وتنظيف السجاد، وتنظيف الكنب، وتنظيف وتلميع الأرضيات، والتعقيم، وغيرها الكثير."
         name="description">
 
     <link rel="canonical" href="https://altawasolclean.com" />
