--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         }
     </script>
     <meta charset="utf-8">
-    <title>Al-Tawasol Co. - Kuwait's best cleaning solutions</title>
+    <title>Al-Tawasol Co. - Kuwait's best cleaning service </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
         content="تنظيف السجاد في مدينة, الكويت خدمة , التنظيف في الكويت Cleaning service in kuwait, Cleaning, تنظيف السجاد , Carpet Cleaning, تنظيف الأريكة , Sofa Cleaning, تنظيف المنزل , Home Cleaning, تنظيف المكاتب , Office Cleaning, Kuwait, تنظيف تواصل , Tawasol, شركة تنظيف , أفضل خدمة تنظيف , خدمة التنظيف بالقرب مني"
@@ -176,6 +176,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="client.html" class="nav-item nav-link">Clients</a>
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                <a href="blog.html" class="nav-item nav-link">Blog</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
