--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,25 @@
 
         gtag('config', 'AW-17437461218');
     </script>
+    </script>
+    <!-- Event snippet for Click call conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+        function gtag_report_conversion(url) {
+            var callback = function () {
+                if (typeof (url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-17437461218/D2-rCMPZhoQbEOKV6vpA',
+                'value': 0.5,
+                'currency': 'USD',
+                'event_callback': callback
+            });
+            return false;
+        }
+    </script>
     <meta charset="utf-8">
     <title>Al-Tawasol Co. - Kuwait's best cleaning service </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -31,8 +50,7 @@
         content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27 years of experience. We have an expert team of more than 35 cleaners. We provide the best cleaning service in kuwait. Our services include: Home cleaning, Office cleaning, Carpet cleaning, Sofa cleaning, Floor cleaning and polishing, Sanitization and more. شركة التواصل هي شركة تنظيف منازل ومكاتب احترافية في الكويت، بخبرة 27 عامًا. لدينا فريق يضم أكثر من 35 عامل نظافة. نقدم أفضل خدمات التنظيف في الكويت. تشمل خدماتنا تنظيف المنازل، وتنظيف المكاتب، وتنظيف السجاد، وتنظيف الكنب، وتنظيف وتلميع الأرضيات، والتعقيم، وغيرها الكثير."
         name="description">
 
-    <link rel="canonical" href="https://altawasolclean.com/404" />
-
+    <link rel="canonical" href="https://altawasolclean.com/client" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -72,7 +90,6 @@
     </div>
     <!-- Spinner End -->
 
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0">
         <div class="row gx-0 d-none d-lg-flex">
@@ -89,7 +106,8 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-secondary me-2"></small>
-                    <a class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a>
+                    <a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary"
+                        href="tel:+965 9777 3983">+965 9777 3983</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Whatsapp account" class="btn btn-sm-square bg-white text-primary me-1"
@@ -116,7 +134,8 @@
                 </div>
                 <div class="">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small><a class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a></small>
+                    <small><a onclick="gtag_report_conversion('tel:+965 9777 3983')" class="text-secondary"
+                            href="tel:+965 9777 3983">+965 9777 3983</a></small>
                 </div>
             </div>
             <!-- toggler and quote -->
@@ -156,7 +175,7 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="client.html" class="nav-item nav-link">Clients</a>
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                <a href="blog.html" class="nav-item nav-link">Blog</a>
+                <a href="blog.html" class="nav-item nav-link active">Blog</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -181,12 +200,12 @@
     <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-2.jpg);">
         <div class="container-fluid page-header-inner py-5">
             <div class="container text-center">
-                <h1 class="display-3 text-white mb-3 animated slideInDown">Not Found</h1>
+                <h1 class="display-3 text-white mb-3 animated slideInDown">Blog</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
-                        <li class="breadcrumb-item text-white active" aria-current="page">404</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Blog</li>
                     </ol>
                 </nav>
             </div>
@@ -195,23 +214,23 @@
     <!-- Page Header End -->
 
 
-    <!-- 404 Start -->
+
+
+    <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1">404</h1>
-                    <h1 class="mb-4">Page Not Found</h1>
-                    <p class="mb-4">We're sorry, the page you have looked for does not exist in our website! Maybe go to
-                        our home page?</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="/">Go Back To Home</a>
-                </div>
+        <div class="container">
+            <div class="text-center">
+                <h6 class="text-primary text-uppercase">Blogs</h6>
+                <h1 class="mb-4">Posts</h1>
             </div>
+            <p class="mb-5">Under construction</p>
         </div>
     </div>
-    <!-- 404 End -->
+    <!-- Testimonial End -->
 
+
+
+    
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -220,7 +239,9 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kuwait</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9777 3983">+965 9777 3983</a>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a
+                            onclick="gtag_report_conversion('tel:+965 9777 3983')" href="tel:+965 9777 3983">+965 9777
+                            3983</a>
                     </p>
                     <a href="mailto:support@altawasolclean.com" class="text-white mb-2"><i
                             class="fa fa-envelope me-3"></i>support@altawasolclean.com</a>
