--- a/gallery.html
+++ b/gallery.html
@@ -393,7 +393,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <div class="row gx-5">
                 <div class="col-lg-6 py-5">
                     <div class="py-5">
-                        <h1 class="text-white mb-4">Certified Cleaning Experts in Kuwait</h1>
+                        <h2 class="font-40 text-white mb-4">Certified Cleaning Experts in Kuwait</h2>
                         <p class="text-white mb-0">At Al-Tawasol Co., we're proud to be recognized for excellence,
                             integrity, and service in the cleaning industry. With over 27 years of proven experience,
                             numerous industry certifications, and a team of highly skilled professionals, we set the
@@ -404,37 +404,40 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn"
                         data-wow-delay="0.6s">
-                        <h1 class="text-white mb-4">Discuss with our experts</h1>
-                        <form>
+                        <h2 class="text-white mb-4 font-40">Book for a service</h2>
+                        <form action="https://formspree.io/f/mqabogaj" method="POST">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
+                                    <input name="name" type="text" class="form-control border-0" placeholder="Your Name"
                                         style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;">
+                                    <input name="phone" type="text" class="form-control border-0"
+                                        placeholder="Your Phone" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
+                                    <select name="service" class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        <option value="Carpet Cleaning">Carpet Cleaning</option>
+                                        <option value="Floor Cleaning">Floor Cleaning</option>
+                                        <option value="Sofa Cleaning">Sofa Cleaning</option>
+                                        <option value="Other">Other</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
+                                        <input name="date" type="text"
+                                            class="form-control border-0 datetimepicker-input"
                                             placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker"
                                             style="height: 55px;">
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea name="description" class="form-control border-0"
+                                        placeholder="Description"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-secondary w-100 py-3" type="submit">Get a quote</button>
+                                    <button class="btn btn-secondary w-100 py-3" type="submit">Book Order</button>
                                 </div>
                             </div>
                         </form>
