add lazy loading

--- a/gallery.html
+++ b/gallery.html
@@ -237,20 +237,20 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <div class="gallery-container container-xxl">
         <div class="gallery-row">
             <div class="gallery-column">
-                <img src="img/about.jpg" style="width:100%">
-                <img src="img/gallery/floor cleaning.png" style="width:100%">
+                <img loading="lazy" src="img/about.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/floor cleaning.png" style="width:100%">
             </div>
             <div class="gallery-column">
-                <img src="img/gallery/chandelier.jpg" style="width:100%">
-                <img src="img/gallery/home cleaning.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/chandelier.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/home cleaning.jpg" style="width:100%">
             </div>
             <div class="gallery-column">
-                <img src="img/gallery/glass.jpg" style="width:100%">
-                <img src="img/gallery/outdoor.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/glass.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/outdoor.jpg" style="width:100%">
             </div>
             <div class="gallery-column">
-                <img src="img/gallery/polishing.jpg" style="width:100%">
-                <img src="img/gallery/kitchen cleaning.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/polishing.jpg" style="width:100%">
+                <img loading="lazy" src="img/gallery/kitchen cleaning.jpg" style="width:100%">
             </div>
         </div>
     </div>
