--- a/gallery.html
+++ b/gallery.html
@@ -70,10 +70,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css?cache-bust-version=1.0" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css?cache-bust-version=1.0" rel="stylesheet">
 </head>
 
 <body>
@@ -601,7 +601,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js?cache-bust-version=1.0"></script>
 </body>
 
 </html>
