--- a/blog.html
+++ b/blog.html
@@ -261,23 +261,21 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="blog-item h-100">
                         <div class="blog-img">
-                            <img src="img/about.jpg" class="img-fluid w-100" alt="">
+                            <img src="img/blog/thumbnail-1.jpg" class="img-fluid w-100" alt="">
                         </div>
                         <div class="blog-content p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 12 May 2024
+                                <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> March 15, 2025
                                 </p>
                             </div>
-                            <a style="font-size: 20px;" href="#" class="h4 d-block mb-4">How to choose the best cleaning
-                                service in Kuwait
-                                City?</a>
-                            <p href="#" class="blog-subtext d-block mb-4">Lorem ipsum, dolor sit amet
-                                consectetur adipisicing elit. Error cumque optio corrupti ad quae quisquam harum
-                                voluptatem, nesciunt molestias magni accusantium, et nam dolores numquam.</p>
+                            <a style="font-size: 20px;" href="#" class="h4 d-block mb-4">Professional Cleaning Services
+                                in Kuwait</a>
+                            <p href="#" class="blog-subtext d-block mb-4">A clean home or office is more than just about
+                                appearances—it's about creating a healthy, comfortable, and welcoming environment.</p>
 
-                            <a href="" class="btn btn-primary py-2 px-4">Read More<i
-                                    class="fa fa-arrow-right ms-3"></i></a>
+                            <a href="/professional-cleaning-services-in-kuwait.html"
+                                class="btn btn-primary py-2 px-4">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
                     </div>
                 </div>
@@ -295,9 +293,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <a style="font-size: 20px;" href="#" class="h4 d-block mb-4">How to choose the best cleaning
                                 service in Kuwait
                                 City?</a>
-                            <p href="#" class="blog-subtext d-block mb-4">Lorem ipsum, dolor sit amet
-                                consectetur adipisicing elit. Error cumque optio corrupti ad quae quisquam harum
-                                voluptatem, nesciunt molestias magni accusantium, et nam dolores numquam.</p>
+                            <p href="#" class="blog-subtext d-block mb-4">Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Impedit obcaecati facilis ut quasi. Cupiditate enim sequi eveniet quod
+                                alias praesentium!</p>
 
                             <a href="" class="btn btn-primary py-2 px-4">Read More<i
                                     class="fa fa-arrow-right ms-3"></i></a>
