remove canonical tag from blog

--- a/professional-cleaning-services-in-kuwait.html
+++ b/professional-cleaning-services-in-kuwait.html
@@ -50,7 +50,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         content="Looking for professional cleaning services in Kuwait? Al Tawasol Co. offers expert carpet cleaning, sofa cleaning, floor polishing, and office cleaning. Book today for a spotless home or office! مركز التواصل هي شركة تنظيف منازل ومكاتب احترافية في الكويت، بخبرة 27 عامًا. لدينا فريق يضم أكثر من 35 عامل نظافة. نقدم أفضل خدمات التنظيف في الكويت. تشمل خدماتنا تنظيف المنازل، وتنظيف المكاتب، وتنظيف السجاد، وتنظيف الكنب، وتنظيف وتلميع الأرضيات، والتعقيم، وغيرها الكثير."
         name="description">
 
-    <link rel="canonical" href="https://altawasolclean.com/client" />
+    <!-- <link rel="canonical" href="https://altawasolclean.com/client" /> -->
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
