--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27 years of experience. We have an expert team of more than 35 cleaners. We provide the best cleaning service in kuwait. Our services include: Home cleaning, Office cleaning, Carpet cleaning, Sofa cleaning, Floor cleaning and polishing, Sanitization and more. مركز التواصل هي شركة تنظيف منازل ومكاتب احترافية في الكويت، بخبرة 27 عامًا. لدينا فريق يضم أكثر من 35 عامل نظافة. نقدم أفضل خدمات التنظيف في الكويت. تشمل خدماتنا تنظيف المنازل، وتنظيف المكاتب، وتنظيف السجاد، وتنظيف الكنب، وتنظيف وتلميع الأرضيات، والتعقيم، وغيرها الكثير."
         name="description">
 
-    <link rel="canonical" href="https://altawasolclean.com/client" />
+    <link rel="canonical" href="https://altawasolclean.com/blog" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
