fix font problem

--- a/professional-cleaning-services-in-kuwait.html
+++ b/professional-cleaning-services-in-kuwait.html
@@ -59,6 +59,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Ubuntu:wght@400;500&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.7.2/css/all.min.css" rel="stylesheet">
@@ -77,8 +80,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
 
     <!-- Theme Style -->
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-blog.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
